<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="umeng_channel">google_mmall</string>
    <string name="umeng_params_channel">google</string>
    <string name="youmi_channel">10010</string>
    <string name="umeng_key">526a16bd56240b8ec7010872</string>
    <string name="app_name">高清美女写真</string>
    <string name="menu_settings">Settings</string>
    <string name="offer_point">offer_point</string>
    <string name="pre_point">pre_point</string>
    <string name="show_adview">show_adview</string>
    <string name="more_app">更多应用</string>
    <string name="refresh">刷新</string>
    <string name="readed">已读</string>
    <string name="unreaded">未读</string>
    <string name="delete_tips" formatted="false">是否要删除%s</string>
    <string name="cancel">取消</string>
    <string name="ok">删除</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="download">下载</string>
    <string name="pull_label">滑动刷新&#8230;</string>
    <string name="release_label">松开刷新&#8230;</string>
    <string name="loading_label">加载中&#8230;</string>
    <string name="pull_label1">温馨提示：每天晚上八点都会更新哦</string>
    <string name="up_label">上拉加载更多&#8230;</string>
    <string name="up_sub_label">温馨提示：每天晚上八点都会更新哦</string>
    <string name="no_more_tips">暂时没有更多了哦~\n温馨提示：每天晚上八点都会更新哦</string>
    <string name="adview_setting">广告条设置</string>
    <string name="close">关闭</string>
    <string name="confirm">确定</string>
    <string name="close_now">现在关闭</string>
    <string name="open">打开</string>
    <string name="hot">热门下载</string>
    <string name="about">关于</string>
    <string name="version_info" formatted="false">版本号:%s</string>
    <string name="about_tips">常见问题解答:\n1，多久更新一次？\n每天都会至少更新一集，所以完全可以满足大家的浏览。\n\n2，不够看怎么办？\n没关系，稍后会有更多推出，请大家不要着急。\n\n3，软件是否会在后台做一些用户不知道的事？\n不会，软件没有任何做用户不知道的事情，没有推送提示。\n\n4，如果联系反馈？\n直接在google play上留言即可。\n\n希望大家在google play上评论打分，你的支持是我最好的动力。</string>
    <string name="adview_close_tips" formatted="false">永久关闭页面下端广告条需要消费20个书币，你现在的书币是%s，是否要立刻关闭广告条?</string>
    <string name="adview_close_nopoint_tips" formatted="false">永久关闭页面下端广告条需要消费20个书币，你现在的书币是%s，是否要立刻下载书币?</string>
    <string name="adview_open">广告条功能已经关闭，是否要打开?</string>
    <string name="rate_tips">应用评分</string>
    <string name="btn_rate">评分</string>
    <string name="book_not_find" formatted="false">没有发现图书 %s,请重新下载</string>
    <string name="fb_download_tips">您的手机中没有安装FBReader(FBReader是第三方开源的读书软件,深受广大机友的喜爱)，只有下载了读书软件您才可以阅读书籍哦。</string>
    <string name="fb_download_now">Market立刻下载</string>
    <string name="fb_read_now">继续阅读</string>

    <!-- RefreshListView -->
    <string name="refresh_listview_header_hint_normal">下拉刷新列表&#8230;</string>
    <string name="refresh_listview_header_hint_ready">松开刷新列表&#8230;</string>
    <string name="refresh_listview_header_hint_loading">加载中&#8230;</string>
    <string name="refresh_listview_footer_hint_normal">加载中&#8230;</string>
    <string name="refresh_listview_the_end">没有更多信息</string>
    <string name="downloaded">已下载</string>
    <string name="undownload">未下载</string>
    <string name="unziped">以解压</string>
    <string name="unknown">未知</string>
    <string name="download_tips" formatted="false">是否要下载:%s</string>
    <string name="download_jifenbao_content" formatted="false">积分宝是一款为其他应用提供积分账户管理的免费应用，使用积分宝可以在多个应用之间共享积分。\n%s是否要下载积分宝?</string>
    <string name="jifenbao_installed">您已经安装了积分宝</string>
    <string name="jifenbao_uninstalled">您未安装积分宝</string>
    <string name="download_jifenbao_title">积分宝下载</string>
    <string name="wall_info_detail">查看当前书币</string>
    <string name="download_count_text" formatted="false">下载次数:%s</string>
    <string name="book_download_tips" formatted="false">图书 %s 已经下载到 %s</string>

    <item name="is_downloading" type="id"></item>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="logout">切换账户</string>
    <string name="login_title">积分宝账户登录</string>
    <string name="download_jifenbao_title">积分宝下载</string>
    <string name="redownload">重新下载</string>
    <string name="fetch_jifen_btn">获取积分</string>
    <string name="open_jifenbao">打开积分宝</string>
    <string name="user_not_exist">用户不存在，请先下载积分宝注册</string>
    <string name="user_exist">此用户已经存在，请更换用户名</string>
    <string name="user_or_password_empty">用户名密码不能为空</string>
    <string name="password_error">用户名密码不正确</string>
    <string name="logining">正在登录中，请稍后&#8230;</string>
    <string name="registe_tips">正在注册中，请稍后&#8230;</string>
    <string name="registe_btn">注册积分宝</string>
    <string name="registe_failed">积分宝帐号注册失败</string>
    <string name="loading">正在加载中，请稍后&#8230;</string>
    <string name="download_jifenbao">下载积分宝</string>
    <string name="error_sync_point">同步积分信息失败，请稍后重试</string>
    <string name="download_jifenbao_tips">您还没有安装积分宝。积分宝是一款可以给多个应用提供积分的免费应用，不同应用使用同一帐号登录以后，积分宝就可以为第三方应用提供积分服务。</string>
    <string name="downalod_jifenbao_registe">该账户不存在，您还没有积分宝账户？请切换到积分宝注册账户。\n积分宝是一款可以给多个应用提供积分的免费应用，不同应用使用同一帐号登录以后，积分宝就可以为第三方应用提供积分服务。</string>
    <string name="jifenbao_tips">积分宝是一款可以给多个应用提供积分的免费应用，不同应用使用同一帐号登录以后，积分宝就可以为第三方应用提供积分服务。\n如果您还没有积分宝帐号，可以下载积分宝注册来获取帐号和积分。</string>
    
    <string name="tips_adview_close">温馨提示:如果您想关闭最下面的广告条，请点击右上角的设置按钮&#8212;>广告条设置来永久关闭广告条</string>
    <string name="tips_title">提示</string>
    <string name="local">本地图书</string>
    <string name="more">更多图书</string>
    <string name="page_count" formatted="false">%s/%s</string>
    <string name="more_app_tips">更多图书稍后公开，敬请期待，各种你想看的哦，你懂的~</string>
    <string name="has_more">hasMore</string>
    <string name="pre_version">preVersion</string>
    <string name="more_tips">点击加载更多</string>
    <string name="no_more_tips">暂时没有更多了哦~\n温馨提示：每天晚上八点都会更新哦</string>
    <string name="empty_download_tips">正在加载中，请稍后~\n温馨提示：每天晚上八点都会更新哦</string>
    <string name="tips_no_more">没有更多的了哦~</string>
    <string name="offer_download_tips" formatted="false">您的书币已经不足%s(当前书币%s),需要通过积分宝获得%s书币才能继续下载,积分宝不会收取您的费用,请放心下载。</string>
    <string name="offer_info_detail" formatted="false">您的账号 %s 当前含有书币%s。\n每下载一本书需要%s书币。获得积分可以使用积分宝来获取。</string>
    <string name="offer_download_cute_tips">温馨提示:下载应用以后请一定使用应用1分钟以上，才能获得书币哦。如果在几分钟内不能获得书币，请不要删除应用，一段时间以后会获得书币。</string>

    <string-array name="title_array">
        <item>肉丝写真</item>
        <item>美腿丝袜</item>
        <item>内涵漫画</item>
        <item>Disi写真</item>
    </string-array>

    <string name="drawer_open">期刊</string>

    <string name="login_text">立刻登录</string>
    <string name="user_point" formatted="false">%S分</string>

</resources>