<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_load"
        android:icon="@drawable/actionbar_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh">
    </item>
    <item
        android:id="@+id/detail_action_more"
        android:icon="@drawable/android_db_actionbar_more"
        android:showAsAction="always"
        android:title="etc">
        <menu>
            <item
                android:id="@+id/wall_info"
                android:showAsAction="ifRoom"
                android:title="@string/wall_info_detail">
            </item>
            <item android:id="@+id/close_adview"
                android:showAsAction="ifRoom"
                android:title="@string/adview_setting"/>
            <item android:id="@+id/rate"
                android:showAsAction="ifRoom"
                android:title="@string/rate_tips"/>
            <item android:id="@+id/about"
                android:showAsAction="ifRoom"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>